# hneuro

./: .gitignore  README.md  neuro.cabal  neuro.tex  test.tex
src/: Main.hs  N2.hs  N3.hs  NamedFunc.hs  Neuro.hs  Test1.hs
src/N2/: DSL.hs
src/Neuro/: Create.hs  DSL.hs  GenTikz.hs  Run.hs  Show.hs  Util.hs
src/Neuro/DSL/: Internal.hs
src/Neuro/Show/: Tikz.hs  TikzOld.hs
src/Tikz/: DSL.hs  DSL_old.hs
test/: NeuroSpec.hs  TestsCommon.hs
test/Neuro/: CreationSpec.hs  RunSpec.hs
