name: neuro
version: 0.0.0
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: LICENSE.md
data-dir: ""
 
library
    build-depends: base -any, containers -any, random -any, text -any,
                   text-format -any
    exposed-modules: NamedFunc Neuro
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: Neuro.Create Neuro.DSL Neuro.GenTikz Neuro.DSL
                   Neuro.Run
 
executable neuro-run
    build-depends: base -any, containers -any, random -any, text -any,
                   text-format -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Neuro.Create Neuro.GenTikz Neuro.DSL Neuro.Run
 
test-suite neuro-spec
    build-depends: hspec ==2.*, neuro -any, base -any, containers -any,
                   random -any
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    buildable: True
    hs-source-dirs: test
 