name: neuro
version: 0.0.1
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: LICENSE.md
data-dir: ""

library
    build-depends: base, containers, random, text, text-format
    exposed-modules: NamedFunc
                     Neuro
                     Neuro.DSL
                     Neuro.Create
                     Neuro.Run
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: Neuro.GenTikz

executable neuro-run
    build-depends: base, containers, random, text, text-format
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
--    other-modules: Neuro.Create Neuro.GenTikz Neuro.DSL Neuro.Run

test-suite neuro-spec
    build-depends: hspec ==2.*, QuickCheck,
                   neuro, base, containers, random
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    buildable: True
    hs-source-dirs: test

