name: neuro
version: 0.0.1
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: LICENSE.md
data-dir: ""
 
library
    build-depends: base -any, containers -any, random -any, text -any,
                   text-format -any
    exposed-modules: NamedFunc Neuro Neuro.DSL Neuro.Create Neuro.Run
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: Neuro.GenTikz NeuroExperimental
 
executable neuro-run
    build-depends: base -any, containers -any, random -any, text -any,
                   text-format -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 
test-suite neuro-spec
    build-depends: hspec ==2.*, QuickCheck -any, neuro -any, base -any,
                   containers -any, random -any
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    buildable: True
    hs-source-dirs: test
 